Presets: implements presets
*) for percussion staves
*) as a setting in instruments.xml


Former-commit-id: b5d8fe7f6471e4b5887f1cf511320259dac9f424

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -4470,6 +4470,7 @@
 			<shortName>Drs.</shortName>
 			<description>Drumset 3 lines</description>
 			<clef>PERC2</clef>
+			<stafftype staffTypePreset="perc3Line">percussion</stafftype>
 			<stafflines>3</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4483,6 +4484,7 @@
 			<shortName>Sn. Dr.</shortName>
 			<description>Snare Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4512,6 +4514,7 @@
 			<shortName>B. Dr.</shortName>
 			<description>Bass Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4533,6 +4536,7 @@
 			<shortName>P. Sn. Dr.</shortName>
 			<description>Piccolo Snare Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4562,6 +4566,7 @@
 			<shortName>Mil. Dr.</shortName>
 			<description>Military Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4591,6 +4596,7 @@
 			<shortName>H. To.</shortName>
 			<description>High Tom</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4620,6 +4626,7 @@
 			<shortName>M. To.</shortName>
 			<description>MiTom</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4649,6 +4656,7 @@
 			<shortName>L. To.</shortName>
 			<description>Low Tom</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4670,6 +4678,7 @@
 			<shortName>Ped. Hi-hat</shortName>
 			<description>Pedal Hi-hat</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4699,6 +4708,7 @@
 			<shortName>Ch. To.</shortName>
 			<description>Chinese Tom-toms</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4720,6 +4730,7 @@
 			<shortName>Bo.</shortName>
 			<description>Bongos</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4749,6 +4760,7 @@
 			<shortName>Co.</shortName>
 			<description>Congas</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4778,6 +4790,7 @@
 			<shortName>Timb.</shortName>
 			<description>Timbales</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4807,6 +4820,7 @@
 			<shortName>Fr. Dr.</shortName>
 			<description>Frame Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4828,6 +4842,7 @@
 			<shortName>Tbs.</shortName>
 			<description>Tablas</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4857,6 +4872,7 @@
 			<shortName>Cu.</shortName>
 			<description>Cuica</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4886,6 +4902,7 @@
 			<shortName>Fi. Cym.</shortName>
 			<description>Finger Cymbals</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4907,6 +4924,7 @@
 			<shortName>Hi-hat</shortName>
 			<description>Hi-hat</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4936,6 +4954,7 @@
 			<shortName>Tam-tam</shortName>
 			<description>Tam-tam</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4957,6 +4976,7 @@
 			<shortName>Be.</shortName>
 			<description>Bells</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4978,6 +4998,7 @@
 			<shortName>Sle. Be.</shortName>
 			<description>Sleigh Bells</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -4999,6 +5020,7 @@
 			<shortName>Be. Pla.</shortName>
 			<description>Bell Plate</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5020,6 +5042,7 @@
 			<shortName>Bw. Go.</shortName>
 			<description>Bowl Gongs</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5041,6 +5064,7 @@
 			<shortName>Tu.</shortName>
 			<description>Tubo</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5062,6 +5086,7 @@
 			<shortName>Met. Cst.</shortName>
 			<description>Metal Castanets</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5083,6 +5108,7 @@
 			<shortName>Aut. Brk. Dr.</shortName>
 			<description>Automobile Brake Drums</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5104,6 +5130,7 @@
 			<shortName>Ir. Pi.</shortName>
 			<description>Iron Pipes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5125,6 +5152,7 @@
 			<shortName>Chn.</shortName>
 			<description>Chains</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5146,6 +5174,7 @@
 			<shortName>Anv.</shortName>
 			<description>Anvil</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5167,6 +5196,7 @@
 			<shortName>Wd. Bl.</shortName>
 			<description>WooBlocks</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5196,6 +5226,7 @@
 			<shortName>Tmp. Bl.</shortName>
 			<description>Temple Blocks</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5225,6 +5256,7 @@
 			<shortName>Trgl.</shortName>
 			<description>Triangle</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5254,6 +5286,7 @@
 			<shortName>Cym.</shortName>
 			<description>Cymbal</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5276,6 +5309,7 @@
 			<shortName>R. Cym.</shortName>
 			<description>Ride Cymbal</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5305,6 +5339,7 @@
 			<shortName>Ch. Cym.</shortName>
 			<description>Chinese Cymbal</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5326,6 +5361,7 @@
 			<shortName>Cr. Cym.</shortName>
 			<description>Crash Cymbal</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5347,6 +5383,7 @@
 			<shortName>Sp. Cym.</shortName>
 			<description>Splash Cymbal</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5368,6 +5405,7 @@
 			<shortName>Cwb.</shortName>
 			<description>Cowbell</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5389,6 +5427,7 @@
 			<shortName>Clv.</shortName>
 			<description>Claves</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5410,6 +5449,7 @@
 			<shortName>Cst.</shortName>
 			<description>Castanets</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5431,6 +5471,7 @@
 			<shortName>Gro.</shortName>
 			<description>Guiro</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5452,6 +5493,7 @@
 			<shortName>Mrcs.</shortName>
 			<description>Maracas</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5473,6 +5515,7 @@
 			<shortName>Cab.</shortName>
 			<description>Cabasa</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5494,6 +5537,7 @@
 			<shortName>Qui.</shortName>
 			<description>Quijada</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5515,6 +5559,7 @@
 			<shortName>Vib. Slp.</shortName>
 			<description>Vibra Slap</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5536,6 +5581,7 @@
 			<shortName>Slt. Dr.</shortName>
 			<description>Slit Drum</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5557,6 +5603,7 @@
 			<shortName>Wh.</shortName>
 			<description>Whip</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5578,6 +5625,7 @@
 			<shortName>Rat.</shortName>
 			<description>Ratchet</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5599,6 +5647,7 @@
 			<shortName>Thu.</shortName>
 			<description>Thundersheet</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5620,6 +5669,7 @@
 			<shortName>Sa. Bl.</shortName>
 			<description>Sandpaper Blocks</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5641,6 +5691,7 @@
 			<shortName>Wd. Wn. Ch.</shortName>
 			<description>Wooden WinChimes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5662,6 +5713,7 @@
 			<shortName>Bam. Wn. Ch.</shortName>
 			<description>Bamboo WinChimes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5683,6 +5735,7 @@
 			<shortName>Met. Wn Ch.</shortName>
 			<description>Metal WinChimes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5704,6 +5757,7 @@
 			<shortName>Gl. Wn Ch.</shortName>
 			<description>Glass WinChimes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5725,6 +5779,7 @@
 			<shortName>Sh. Wn Ch.</shortName>
 			<description>Shell WinChimes</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5746,6 +5801,7 @@
 			<shortName>Sto.</shortName>
 			<description>Stones</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5767,6 +5823,7 @@
 			<shortName>Fi. Sna.</shortName>
 			<description>Finger Snap</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5788,6 +5845,7 @@
 			<shortName>Hd. Clp.</shortName>
 			<description>HanClap</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5809,6 +5867,7 @@
 			<shortName>Sla.</shortName>
 			<description>Slap</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5830,6 +5889,7 @@
 			<shortName>Sta.</shortName>
 			<description>Stamp</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5851,6 +5911,7 @@
 			<shortName>Perc. Syn.</shortName>
 			<description>Percussion Synthesizer</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5872,6 +5933,7 @@
 			<shortName>Tamb.</shortName>
 			<description>Tambourine</description>
 			<clef>PERC</clef>
+			<stafftype staffTypePreset="perc1Line">percussion</stafftype>
 			<stafflines>1</stafflines>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
@@ -5940,7 +6002,7 @@
 		<Instrument id="guitar-(tablature)">
 			<init>guitar</init>
 			<description>Guitar (Tablature)</description>
-			<stafftype>tablature</stafftype>
+			<stafftype staffTypePreset="tab6StrCommon">tablature</stafftype>
 			<clef>TAB</clef>
 		</Instrument>
 		<Instrument id="11-string-alto-guitar">
@@ -6041,7 +6103,7 @@
 		<Instrument id="electric-bass-(4-str.-tab)">
 			<init>electric-bass</init>
 			<description>Electric Bass (4-str. TAB)</description>
-			<stafftype>tablature</stafftype>
+			<stafftype staffTypePreset="tab4StrCommon">tablature</stafftype>
 			<clef>TAB</clef>
 		</Instrument>
 		<Instrument id="fretless-electric-bass">
@@ -6078,7 +6140,7 @@
 		<Instrument id="ukulele-(4-str.-tab)">
 			<init>ukulele</init>
 			<description>Ukulele (4-str. TAB)</description>
-			<stafftype>tablature</stafftype>
+			<stafftype staffTypePreset="tabUkulele">tablature</stafftype>
 			<clef>TAB</clef>
 		</Instrument>
 		<Instrument id="baritone-ukulele">
@@ -6121,7 +6183,7 @@
 		<Instrument id="lute-(tablature)">
 			<init>lute</init>
 			<description>Lute (Tablature)</description>
-			<stafftype>tablature</stafftype>
+			<stafftype staffTypePreset="tab6StrItalian">tablature</stafftype>
 			<clef>TAB</clef>
 		</Instrument>
 		<Instrument id="ren.-tenor-lute-(5-course)">
@@ -7511,7 +7573,7 @@
 		<Instrument id="viola-da-gamba-(tablature)">
 			<init>viola-da-gamba</init>
 			<description>Viola da gamba (Tablature)</description>
-			<stafftype>tablature</stafftype>
+			<stafftype staffTypePreset="tab6StrFrench">tablature</stafftype>
 			<clef>TAB</clef>
 		</Instrument>
 		<Instrument id="viola-da-gamba-(6-strings)">
