small fix to instruments.xml
for D Trumpet


Former-commit-id: 55e89f3a22237d3ec40bdcdff6c2cf7ae9eb4f47

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -2888,9 +2888,9 @@
 			</Channel>
 		</Instrument>
 		<Instrument id="d-trumpet">
-			<longName>Trumpet</longName>
-			<shortName>Tpt.</shortName>
-			<description>Trumpet</description>
+			<longName>D Trumpet</longName>
+			<shortName>D Tpt.</shortName>
+			<description>D Trumpet</description>
 			<musicXMLid>brass.trumpet.d</musicXMLid>
 			<extended>1</extended>
 			<clef>G</clef>
