Allows to select the staff types for the instruments in the Instruments dlg box
Former-commit-id: 6a217a95bde2547701fd57b9ff8eb898c505cc8c

--- a/mscore/instrdialog.ui
+++ b/mscore/instrdialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>630</width>
-    <height>341</height>
+    <width>650</width>
+    <height>340</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -252,11 +252,14 @@
       <property name="alternatingRowColors">
        <bool>true</bool>
       </property>
+      <property name="indentation">
+       <number>10</number>
+      </property>
       <property name="uniformRowHeights">
        <bool>true</bool>
       </property>
       <property name="columnCount">
-       <number>4</number>
+       <number>5</number>
       </property>
       <column>
        <property name="text">
@@ -279,6 +282,11 @@
        </property>
        <property name="toolTip">
         <string>Staff Linked to Previous</string>
+       </property>
+      </column>
+      <column>
+       <property name="text">
+        <string>Staff type</string>
        </property>
       </column>
      </widget>
