--- a/mscore/instrwizard.ui
+++ b/mscore/instrwizard.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QHBoxLayout" name="horizontalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout" stretch="10,0,15">
    <item>
     <layout class="QVBoxLayout" name="verticalLayout">
      <item>
@@ -200,11 +200,14 @@
      <property name="alternatingRowColors">
       <bool>true</bool>
      </property>
+     <property name="indentation">
+      <number>10</number>
+     </property>
      <property name="uniformRowHeights">
       <bool>true</bool>
      </property>
      <property name="columnCount">
-      <number>3</number>
+      <number>5</number>
      </property>
      <column>
       <property name="text">
@@ -218,7 +221,17 @@
      </column>
      <column>
       <property name="text">
-       <string notr="true">3</string>
+       <string notr="true">2</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>3</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>4</string>
       </property>
      </column>
     </widget>
