fix staff type of drumset
Former-commit-id: 16878a6d85e2e09566897b265461f6ed779f08f4

--- a/share/templates/instruments.xml
+++ b/share/templates/instruments.xml
@@ -4458,6 +4458,7 @@
 			<shortName>Drs.</shortName>
 			<description>Drumset 5 lines</description>
 			<clef>PERC2</clef>
+			<stafftype>percussion</stafftype>
 			<barlineSpan>1</barlineSpan>
 			<drumset>1</drumset>
 			<Channel>
