Make header visible and set column widths
Former-commit-id: 19921f4326e1042060ebbe92af6aa0d01614aa33

--- a/mscore/harmony.ui
+++ b/mscore/harmony.ui
@@ -396,7 +396,7 @@
            <number>3</number>
           </property>
           <attribute name="horizontalHeaderVisible">
-           <bool>false</bool>
+           <bool>true</bool>
           </attribute>
           <attribute name="horizontalHeaderCascadingSectionResizes">
            <bool>false</bool>
