--- a/mscore/timesigwizard.ui
+++ b/mscore/timesigwizard.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>426</width>
-    <height>311</height>
+    <height>333</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -165,7 +165,7 @@
       <item>
        <widget class="QLabel" name="label_5">
         <property name="text">
-         <string>Time Signature</string>
+         <string>Duration:</string>
         </property>
        </widget>
       </item>
