--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -545,7 +545,7 @@
           <item row="3" column="2">
            <widget class="QToolButton" name="myPluginsButton">
             <property name="text">
-             <string>...</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -568,17 +568,10 @@
           <item row="6" column="1">
            <widget class="QLineEdit" name="myImages"/>
           </item>
-          <item row="6" column="2">
-           <widget class="QToolButton" name="myImagesButton">
-            <property name="text">
-             <string>...</string>
-            </property>
-           </widget>
-          </item>
           <item row="2" column="2">
            <widget class="QToolButton" name="myTemplatesButton">
             <property name="text">
-             <string>...</string>
+             <string/>
             </property>
            </widget>
           </item>
@@ -595,6 +588,27 @@
             </property>
             <property name="indent">
              <number>5</number>
+            </property>
+           </widget>
+          </item>
+          <item row="6" column="2">
+           <widget class="QToolButton" name="myImagesButton">
+            <property name="text">
+             <string/>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="2">
+           <widget class="QToolButton" name="mySoundfontsButton">
+            <property name="text">
+             <string>...</string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="2">
+           <widget class="QToolButton" name="mySfzButton">
+            <property name="text">
+             <string>...</string>
             </property>
            </widget>
           </item>
