add store/recall global synthesizer settings; connect tuning settings
Former-commit-id: 2deb49be5a53fc2454f2651b7b431278fb390a3e

--- a/mscore/synthcontrol.ui
+++ b/mscore/synthcontrol.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>594</width>
-    <height>269</height>
+    <width>616</width>
+    <height>281</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -16,13 +16,20 @@
   <layout class="QGridLayout" name="gridLayout_2">
    <item row="1" column="0">
     <layout class="QGridLayout" name="gridLayout_4">
-     <item row="0" column="1">
-      <widget class="QPushButton" name="loadButton">
+     <item row="0" column="3">
+      <widget class="QPushButton" name="storeButton">
+       <property name="text">
+        <string>Store</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0">
+      <widget class="QPushButton" name="saveButton">
        <property name="toolTip">
-        <string>Load from Score</string>
+        <string>Save to Score</string>
        </property>
        <property name="text">
-        <string>Load</string>
+        <string>Save</string>
        </property>
       </widget>
      </item>
@@ -39,39 +46,20 @@
        </property>
       </spacer>
      </item>
-     <item row="0" column="3">
-      <widget class="QLabel" name="label_39">
+     <item row="0" column="1">
+      <widget class="QPushButton" name="loadButton">
+       <property name="toolTip">
+        <string>Load from Score</string>
+       </property>
        <property name="text">
-        <string>Master Tuning</string>
+        <string>Load</string>
        </property>
       </widget>
      </item>
      <item row="0" column="4">
-      <widget class="QDoubleSpinBox" name="masterTuning">
-       <property name="suffix">
-        <string extracomment="Frequency Herz">Hz</string>
-       </property>
-       <property name="decimals">
-        <number>1</number>
-       </property>
-       <property name="minimum">
-        <double>300.000000000000000</double>
-       </property>
-       <property name="maximum">
-        <double>600.000000000000000</double>
-       </property>
-       <property name="value">
-        <double>440.000000000000000</double>
-       </property>
-      </widget>
-     </item>
-     <item row="0" column="0">
-      <widget class="QPushButton" name="saveButton">
-       <property name="toolTip">
-        <string>Save to Score</string>
-       </property>
+      <widget class="QPushButton" name="recallButton">
        <property name="text">
-        <string>Save</string>
+        <string>Recall</string>
        </property>
       </widget>
      </item>
@@ -110,7 +98,7 @@
    <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="masterEffectsTab">
       <attribute name="title">
@@ -176,6 +164,72 @@
           </size>
          </property>
         </spacer>
+       </item>
+      </layout>
+     </widget>
+     <widget class="QWidget" name="tab">
+      <attribute name="title">
+       <string>Tuning</string>
+      </attribute>
+      <layout class="QGridLayout" name="gridLayout">
+       <item row="0" column="0">
+        <widget class="QLabel" name="label_39">
+         <property name="text">
+          <string>Master Tuning</string>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <widget class="QDoubleSpinBox" name="masterTuning">
+         <property name="suffix">
+          <string extracomment="Frequency Herz">Hz</string>
+         </property>
+         <property name="decimals">
+          <number>1</number>
+         </property>
+         <property name="minimum">
+          <double>300.000000000000000</double>
+         </property>
+         <property name="maximum">
+          <double>600.000000000000000</double>
+         </property>
+         <property name="value">
+          <double>440.000000000000000</double>
+         </property>
+        </widget>
+       </item>
+       <item row="0" column="2">
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>275</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="1" column="0">
+        <spacer name="verticalSpacer">
+         <property name="orientation">
+          <enum>Qt::Vertical</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>20</width>
+           <height>127</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item row="2" column="0">
+        <widget class="QPushButton" name="changeTuningButton">
+         <property name="text">
+          <string>Change Tuning</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
